changes in footer

--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
     <div class="footer">
         <footer>
     <a target="_blank" href="index.html">Головна сторінка</a>
+    <a target="_blank" href="about.html">Про нас</a>
 </footer>
 </div>
 
