--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </div>
         <div class="footer">
             <footer>
-        <a target="_blank" href="about.html">Про нас</a>
+                <a target="_blank" href="index.html">Головна сторінка</a>
+                <a target="_blank" href="about.html">Про нас</a>
     </footer>
        
     </div>
